--- a/app/src/main/res/layout/detailscreen.xml
+++ b/app/src/main/res/layout/detailscreen.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:mContext="com.liuvasconcelos.ponline.DetailScreenActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/detail_screen_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        >
+        <TextView
+            android:text="@string/backpress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="left"
+            android:paddingLeft="30dp"
+            />
+    </android.support.v7.widget.Toolbar>
+
 
     <LinearLayout
         android:id="@+id/detail_item_layout"
@@ -73,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/detail_item_product_delivery_date"
@@ -89,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="R$ 60,00"
+                android:text="@string/deliverydate"
                 android:textColor="@color/gray"
                 android:paddingLeft="10dp"
                 android:textSize="20dp"/>
@@ -97,4 +116,4 @@
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
