--- a/app/src/main/res/layout/mainscreen.xml
+++ b/app/src/main/res/layout/mainscreen.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:mContext="com.liuvasconcelos.ponline.MainScreenActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_screen_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        >
+        <TextView
+            android:text="@string/backpress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="left"
+            android:paddingLeft="30dp"
+            />
+    </android.support.v7.widget.Toolbar>
 
     <ListView
         android:id="@+id/list_view"
@@ -14,5 +32,4 @@
     </ListView>
 
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
