--- a/app/src/main/res/layout/mainscreen.xml
+++ b/app/src/main/res/layout/mainscreen.xml
@@ -24,6 +24,16 @@
             />
     </android.support.v7.widget.Toolbar>
 
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:background="@color/colorAccent"
+        android:text="@string/addproduct"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/white"/>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="wrap_content"
