--- a/app/src/main/res/layout/detailscreen.xml
+++ b/app/src/main/res/layout/detailscreen.xml
@@ -105,7 +105,28 @@
                 android:textColor="@color/gray"
                 android:paddingLeft="10dp"
                 android:textSize="20dp"/>
+
+
         </LinearLayout>
+        <Button
+            android:id="@+id/delete_button"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@color/colorAccent"
+            android:text="@string/delete"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/white"/>
+
+        <Button
+            android:id="@+id/update_button"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@color/colorAccent"
+            android:text="@string/update"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </ScrollView>
 
