--- a/app/src/main/res/layout/item_recycle_view.xml
+++ b/app/src/main/res/layout/item_recycle_view.xml
@@ -6,15 +6,9 @@
     <LinearLayout
         android:id="@+id/list_view_item_layout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/list_view_item_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/picanha"
-            android:layout_gravity="center"/>
+        android:layout_height="100dp"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/list_view_item_product_name"
