--- a/app/src/main/res/layout/item_recycle_view.xml
+++ b/app/src/main/res/layout/item_recycle_view.xml
@@ -1,36 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/list_view_item_layout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/list_view_item_product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Picanha"
-            android:textColor="@color/wine"
-            android:textSize="30dp"/>
+        <LinearLayout
+            android:id="@+id/item_layout"
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/list_view_item_product_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Lorem ipsum dolor sit amet, convallis donec voluptatem, wisi velit."
-            android:maxLines="3"
-            android:textColor="@color/gray"
-            android:textSize="15dp"
-            android:textAlignment="center"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"/>
+            <TextView
+                android:id="@+id/list_view_item_product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="15dp"
+                android:text="Picanha"
+                android:textColor="@color/wine"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/list_view_item_product_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="3"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:text="Lorem ipsum dolor sit amet, convallis donec voluptatem, wisi velit."
+                android:textColor="@color/gray"
+                android:textSize="15dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/photo_item_layout"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/photo"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/index"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
